<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="276dp"
        android:layout_marginBottom="241dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/enterText"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login"
            android:inputType="text"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLog"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/enterButton" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/Me"
        android:textSize="15sp" />
</RelativeLayout>